# setuptools-cpp

./: .gitignore  .gitmodules  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  publish.yml  pull-request.yml
docs/: contributing.md  index.md  release-notes.md  use-with-poetry.md  user-guide.md
docs/src/: poetry_build.py  poetry_pyproject.toml  setup.py
setuptools_cpp/: __init__.py  cmake_extension.py  extension_builder.py  pybind11_extension.py
tests/: test_setup_cpp.py
tests/cpp/: CMakeLists.txt
tests/cpp/include/: test_pkg.hpp
tests/cpp/src/: test_pkg.cpp
